[tool.poetry]
name = "risk-playground"
version = "0.1.0"
description = ""
authors = ["Harry Day <HarryDOTDayDOTHD@GeeMail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
nasdaq-data-link = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
